# LakeSoul

.github/workflows/: consistency-ci.yml  rust-ci.yml
lakesoul-flink/: pom.xml
lakesoul-flink/src/main/java/org/apache/flink/lakesoul/entry/: SubstraitTest.java
native-io/lakesoul-io-java/: pom.xml
native-io/lakesoul-io-java/src/test/java/org/apache/arrow/flight/sql/example/: FlightSqlClientDemo.java
python/pyo3/: Cargo.toml  pyproject.toml
python/pyo3/src/: lib.rs
rust/: Cargo.toml
rust/lakesoul-datafusion/src/catalog/: mod.rs
rust/lakesoul-datafusion/src/datasource/: table_provider.rs
rust/lakesoul-datafusion/src/datasource/file_format/: metadata_format.rs
rust/lakesoul-datafusion/src/lakesoul_table/: helpers.rs  mod.rs
rust/lakesoul-flight/: Cargo.toml
rust/lakesoul-flight/src/: main.rs
rust/lakesoul-metadata-c/src/: lib.rs
rust/lakesoul-metadata/src/: lib.rs  utils.rs
