[package]
name = "lakesoul-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lakesoul"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
datafusion-python = "33.0.0"
lakesoul-datafusion = { path = "../../rust/lakesoul-datafusion" }
