[package]
name = "lakesoul-flight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
arrow-flight = { version="52.0.0", features=["flight-sql-experimental"] }
arrow-ipc = "52.0.0"
arrow-array = "52.0.0"
arrow-schema = "52.0.0"
prost = { version = "0.12.3", default-features = false, features = ["prost-derive"] }
tonic = { version = "0.11.0", default-features = false, features = ["transport", "codegen", "prost", "tls"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
once_cell = { version = "1" }
